unpackaged/objects/ddcAssess__Assessment_Summary__c.object
<CustomObject>
    <fields>
        <fullName>ddcAssess__Available_Accounts_By_Industry__c</fullName>
        <defaultValue>0</defaultValue>
        <description>List of available accounts that can be populated by the Prospector API based on the Top Ten Industries in this org</description>
        <label>Available Accounts By Industry</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Available_Contacts_By_Industry__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Available Contacts By Industry</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Available_Contacts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Based on matched companies, the number of contacts available via the Prospector</description>
        <label>Available Contacts By Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Available_Executive_Contacts_By_Industry__c</fullName>
        <label>Available_Executive_Contacts_By_Industry</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Batch_Id__c</fullName>
        <description>Batch id of the currently running or last batch job. Will cycle through batches for Account, Contact, and Lead.</description>
        <label>Batch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddcAssess__DUNSRight_Result__c</fullName>
        <label>DUNSRight Result</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Dunsright__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was the assessment run with dunsright enabled</description>
        <label>DUNSRight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Dupe_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was the assessment run with duplicate check enabled</description>
        <label>Dupe Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Employee_Range_Count__c</fullName>
        <label>Employee Range Count</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Error_Count__c</fullName>
        <label>Error Count</label>
        <summarizedField>ddcAssess__Entity_Assessment__c.ddcAssess__Error_Count__c</summarizedField>
        <summaryForeignKey>ddcAssess__Entity_Assessment__c.ddcAssess__Assessment_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Failed_pcnt__c</fullName>
        <formula>IF(ddcAssess__Total__c &gt; 0,ddcAssess__Error_Count__c / ddcAssess__Total__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Failed %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Industry_Count__c</fullName>
        <label>Industry Count</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Revenue_Range_Count__c</fullName>
        <label>Revenue Range Count</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Total__c</fullName>
        <label>Total</label>
        <summarizedField>ddcAssess__Entity_Assessment__c.ddcAssess__Total__c</summarizedField>
        <summaryForeignKey>ddcAssess__Entity_Assessment__c.ddcAssess__Assessment_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ddcAssess__Version__c</fullName>
        <defaultValue>1.0</defaultValue>
        <label>Version</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Assessment Summary</label>
    <listViews>
        <fullName>ddcAssess__All</fullName>
        <columns>NAME</columns>
        <columns>ddcAssess__Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>